version/0.12/_sources/api/solver/_autosummary/settings/parametric_studies.rst.txt
:orphan:

.. _parametric_studies:

parametric_studies
==================

.. currentmodule:: ansys.fluent.core.solver.settings_231.parametric_studies

.. autoclass:: parametric_studies
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

================================================   ===============================

Command                                                                    Summary

================================================   ===============================
:ref:`initialize <initialize_1>`                           Start Parametric Study.

:ref:`duplicate <duplicate>`                           Duplicate Parametric Study.

:ref:`set_as_current <set_as_current>`                       Set As Current Study.

:ref:`use_base_data <use_base_data>`                                Use Base Data.

:ref:`export_design_table <export_design_table>`        Export Design Point Table.

:ref:`import_design_table <import_design_table>`        Import Design Point Table.

================================================   ===============================

.. rubric:: Named object type

:ref:`parametric_studies_child <parametric_studies_child>`


.. rubric:: Included in:

==================   ==================

Parent                          Summary

==================   ==================
:ref:`root <root>`       'root' object.

==================   ==================

